<resources>

        <string name="app_name">MazeProject</string>
        <string name="Create">create by</string>
        <string name="Music">Music</string>
        <string name="by">By</string>
        <string name="Label">A-MAZE-ING</string>
        <string name="Start">Start</string>
        <string name="Level">Level</string>
        <string name="off">Off Music</string>
        <string name="on">On music</string>
        <string name="start">Start</string>
        <string name="menu">Menu</string>
        <string name="timeDisplayed">TimeDisplayed</string>
        <string name="HighScore"></string>
    </resources>


