<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maze123"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="228dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Name"
            android:layout_width="236dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp"
            android:background="#FF6D00"
            android:gravity="center"
            android:text="@string/Label"
            android:textAlignment="center"
            android:textColor="#030003"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="558dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/StartGame"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#536DFE"
                android:gravity="center"
                android:text="@string/start" />

            <Button
                android:id="@+id/Level"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#D50000"
                android:text="@string/Level" />

            <Button
                android:id="@+id/off"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#00C853"
                android:text="@string/off" />

            <Button
                android:id="@+id/on"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#FFD600"
                android:text="@string/on" />

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:text="@string/HighScore"
                android:textColor="#030003"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>